--- a/build.xml
+++ b/build.xml
@@ -5,55 +5,73 @@
   <target name="compile" description="Compile everything.">
     <!-- First, ensure the build directory exists. -->
     <mkdir dir="build" />
-
-    <!-- Detect if javac is available. -->
-    <available property="compiler.available"
-               classname="sun.tools.javac.Main" />
-
-    <!-- Detect if Quicktime support is available. -->
-    <available property="quicktime.available"
-               classname="quicktime.QTSession" />
-
-    <!-- Detect if Twain support is available. -->
-    <available property="twain.available"
-               classname="SK.gnome.twain.TwainEx" />
-
-    <!-- Build everything, selectively excluding optional packages. -->
-    <javac srcdir="source" destdir="build">
-      <exclude name="ij/plugin/twain/*" unless="twain.available" />
-      <exclude name="ij/plugin/quicktime/*" unless="quicktime.available" />
-      <exclude name="ij/plugin/Compiler.java" unless="compiler.available" />
-
+    <!-- Build everything -->
+    <javac srcdir="." destdir="build">
       <!-- The plugins directory only needs to be present at runtime,
            not at build time. -->
       <exclude name="plugins/*" />
     </javac>
   </target>
+  
 
-  <target name="dist" depends="compile"
-          description="Build ij.jar.">
+  <target name="build" depends="compile" description="Build ij.jar.">
     <!-- Copy needed files into the build directory. -->
-    <copy file="source/IJ_Props.txt" todir="build" />
-    <copy file="source/frame-icon.gif" tofile="build/microscope.gif" />
-
+    <copy file="IJ_Props.txt" todir="build" />
+    <copy file="images/microscope.gif" tofile="build/microscope.gif" />
+    <copy file="images/about.jpg" tofile="build/about.jpg" />
     <!-- Build ij.jar. -->
     <jar jarfile="ij.jar" basedir="build"
-         manifest="source/MANIFEST.MF" />
+         manifest="MANIFEST.MF" />
   </target>
 
-  <target name="clean"
-          description="Delete the build files.">
+
+  <target name="clean" description="Delete the build files.">
     <delete dir="build" />
-  </target>
-
-  <target name="distclean" depends="clean"
-          description="Delete the build files and ij.jar.">
     <delete file="ij.jar" />
   </target>
 
-  <target name="run" depends="dist"
-          description="Build and run ImageJ.">
+
+  <target name="run" depends="build" description="Build and run ImageJ.">
     <java jar="ij.jar" fork="yes" />
+  </target>
+  
+
+  <target name="zip" depends="clean" description="Build zrc.zip.">
+    <zip zipfile="../src.zip"
+       basedir=".."
+       includes="source/**"
+    />
+  </target>
+
+
+  <target name="javadocs" description="Build the JavaDocs.">
+    <delete dir="../api" />
+    <mkdir dir="../api" />
+    <javadoc 
+           sourcepath="."
+           packagenames="ij.*"
+           destdir="../api"
+           author="true"
+           version="true"
+           use="true"
+           windowtitle="ImageJ API">
+    </javadoc>
+  </target>
+
+  <target name="zap" description="Delete .DS_Store files created by OS X.">
+    <delete file=".DS_Store" />
+    <delete file="images/.DS_Store" />
+    <delete file="plugins/.DS_Store" />
+    <delete file="ij/.DS_Store" />
+    <delete file="ij/gui/.DS_Store" />
+    <delete file="ij/io/.DS_Store" />
+    <delete file="ij/measure/.DS_Store" />
+    <delete file="ij/plugin/filter/.DS_Store" />
+    <delete file="ij/plugin/frame/.DS_Store" />
+    <delete file="ij/plugin/.DS_Store" />
+    <delete file="ij/process/.DS_Store" />
+    <delete file="ij/text/.DS_Store" />
+    <delete file="ij/util/.DS_Store" />
   </target>
 
 </project>
