Now builds to dist instead of build. Also copies over new about image.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@7 be23795f-a60e-40d4-ba19-055798872e57

--- a/build.xml
+++ b/build.xml
@@ -4,9 +4,9 @@
 
   <target name="compile" description="Compile everything.">
     <!-- First, ensure the build directory exists. -->
-    <mkdir dir="build" />
+    <mkdir dir="dist" />
     <!-- Build everything; add debug="on" to debug -->
-    <javac srcdir="." destdir="build" optimize="on" debug="on" target="1.1">
+    <javac srcdir="." destdir="dist" optimize="on" debug="on" target="1.1">
       <!-- The plugins directory only needs to be present at runtime,
            not at build time. -->
       <exclude name="plugins/**" />
@@ -14,25 +14,26 @@
   </target>
   
 
-  <target name="build" depends="compile" description="Build ij.jar.">
+  <target name="dist" depends="compile" description="Build ij.jar.">
     <!-- Copy needed files into the build directory. -->
-    <copy file="IJ_Props.txt" todir="build" />
-    <copy file="images/microscope.gif" tofile="build/microscope.gif" />
-    <copy file="images/about.jpg" tofile="build/about.jpg" />
-    <copy todir="build/macros"><fileset dir="macros"/></copy>
+    <copy file="IJ_Props.txt" todir="dist" />
+    <copy file="images/microscope.gif" tofile="dist/microscope.gif" />
+    <copy file="images/about.jpg" tofile="dist/about.jpg" />
+    <copy file="images/aboutja.jpg" tofile="dist/aboutja.jpg" />
+    <copy todir="dist/macros"><fileset dir="macros"/></copy>
     <!-- Build ij.jar. -->
-    <jar jarfile="ij.jar" basedir="build"
+    <jar jarfile="ij.jar" basedir="dist"
          manifest="MANIFEST.MF" />
   </target>
 
 
   <target name="clean" description="Delete the build files.">
-    <delete dir="build" />
+    <delete dir="dist" />
     <delete file="ij.jar" />
   </target>
 
 
-  <target name="run" depends="build" description="Build and run ImageJ.">
+  <target name="run" depends="dist" description="Build and run ImageJ.">
     <java jar="ij.jar" fork="yes" />
   </target>
   
