--- a/imagej/pom.xml
+++ b/imagej/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>imagej</groupId>
     <artifactId>imagej-base-pom</artifactId>
-    <version>1.02</version>
+    <version>1.03</version>
   </parent>
 
   <groupId>imagej</groupId>
@@ -174,7 +174,7 @@
     <!-- NB: for imagej-base-pom -->
     <repository>
       <id>imagej.releases</id>
-      <url>http://imagejdev.org:8081/content/repositories/releases</url>
+      <url>http://dev.imagejdev.org:8081/content/repositories/releases</url>
     </repository>
   </repositories>
 
