--- a/imagej/pom.xml
+++ b/imagej/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>net.java.sezpoz</groupId>
       <artifactId>sezpoz</artifactId>
-      <version>1.9-SNAPSHOT</version>
+      <version>1.7</version>
     </dependency>
   </dependencies>
 
