--- a/imagej/pom.xml
+++ b/imagej/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <groupId>imagej</groupId>
-  <artifactId>ij</artifactId>
+  <artifactId>ijx</artifactId>
   <version>2.0-SNAPSHOT</version>
 
   <name>ImageJ</name>
