--- a/script/pom.xml
+++ b/script/pom.xml
@@ -19,6 +19,7 @@
 
 	<modules>
 		<module>beanshell</module>
+		<module>macro</module>
 	</modules>
 
 	<!-- NB: for project parent, in case of partial checkout -->
