--- a/ui/app/pom.xml
+++ b/ui/app/pom.xml
@@ -66,6 +66,12 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>ij-script-macro</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>ij-platform-macosx</artifactId>
 			<version>${project.version}</version>
 			<scope>runtime</scope>
