--- a/script/macro/pom.xml
+++ b/script/macro/pom.xml
@@ -44,6 +44,11 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>ij-data</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
