--- a/core/legacy/pom.xml
+++ b/core/legacy/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.9.0.GA</version>
+			<version>${javassist.version}</version>
 		</dependency>
 
 		<dependency>
