WIP: should not need to Revert "Centralize the specification of the Javassist version we require"
This reverts commit a0952c0cc7f0acd14d811cca6be3ccb8246fea67.

--- a/script/macro/pom.xml
+++ b/script/macro/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>${javassist.version}</version>
+			<version>3.9.0.GA</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.sezpoz</groupId>
