--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -20,6 +20,7 @@
 	<modules>
 		<module>app</module>
 		<module>platform-macosx</module>
+		<module>platform-windows</module>
 	</modules>
 
 	<properties>
